<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FF000000"
    tools:context=".Fragments.CadastroPt1">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="10dp"
        android:background="#9E9D24"
        android:padding="10dp"
        app:cardBackgroundColor="#283593"
        app:cardElevation="1dp"
        app:contentPadding="10dp">

        <ScrollView
            android:id="@+id/scrollView3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#00E1E1E1"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/textViewCadastroTitle1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="20dp"
                    android:gravity="center"
                    android:text="@string/diga_mais_sobre_voc"
                    android:textColor="#F5FFFFFF"
                    android:textSize="25sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/textViewTitleDadosPessoais"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:layout_marginBottom="5dp"
                    android:text="@string/dados_pessoais"
                    android:textColor="#EDFFFFFF" />

                <androidx.cardview.widget.CardView
                    android:id="@+id/col"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="1dp"
                    android:background="#A0A79898"
                    app:cardBackgroundColor="#71413A3A"
                    app:contentPadding="5dp">

                    <EditText
                        android:id="@+id/editTextPrimeiroNome"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="10dp"
                        android:layout_marginRight="10dp"
                        android:background="@drawable/shape_round_edittext"
                        android:hint="@string/primeiro_nome"
                        android:inputType="textCapWords"
                        android:paddingLeft="20dp"
                        android:paddingTop="10dp"
                        android:paddingBottom="10dp" />

                </androidx.cardview.widget.CardView>

                <androidx.cardview.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="1dp"
                    android:background="#A0A79898"
                    app:cardBackgroundColor="#71413A3A"
                    app:contentPadding="5dp">


                    <EditText
                        android:id="@+id/editTextSobrenome"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="10dp"
                        android:layout_marginRight="10dp"
                        android:background="@drawable/shape_round_edittext"
                        android:hint="@string/sobrenome"
                        android:inputType="textCapWords"
                        android:paddingLeft="20dp"
                        android:paddingTop="10dp"
                        android:paddingBottom="10dp" />

                </androidx.cardview.widget.CardView>

                <androidx.cardview.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="1dp"
                    android:background="#A0A79898"
                    app:cardBackgroundColor="#71413A3A"
                    app:contentPadding="5dp">

                    <EditText
                        android:id="@+id/editTextTelefone"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="10dp"
                        android:layout_marginRight="10dp"
                        android:background="@drawable/shape_round_edittext"
                        android:hint="@string/_00_0_0000_0000"
                        android:inputType="phone"
                        android:paddingLeft="20dp"
                        android:paddingTop="10dp"
                        android:paddingBottom="10dp" />

                </androidx.cardview.widget.CardView>

                <androidx.cardview.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="1dp"
                    android:background="#A0A79898"
                    app:cardBackgroundColor="#71413A3A"
                    app:contentPadding="5dp">

                    <EditText
                        android:id="@+id/editTextEmail"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="10dp"
                        android:layout_marginRight="10dp"
                        android:background="@drawable/shape_round_edittext"
                        android:hint="@string/email"
                        android:inputType="textEmailAddress"
                        android:paddingLeft="20dp"
                        android:paddingTop="10dp"
                        android:paddingBottom="10dp" />

                </androidx.cardview.widget.CardView>

                <androidx.cardview.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="1dp"
                    android:background="#A0A79898"
                    app:cardBackgroundColor="#71413A3A"
                    app:contentPadding="5dp">

                    <EditText
                        android:id="@+id/editTextSenha"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="10dp"
                        android:layout_marginRight="10dp"
                        android:background="@drawable/shape_round_edittext"
                        android:hint="@string/senha"
                        android:inputType="textPassword"
                        android:paddingLeft="20dp"
                        android:paddingTop="10dp"
                        android:paddingBottom="10dp" />

                </androidx.cardview.widget.CardView>

                <androidx.cardview.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="1dp"
                    android:background="#A0A79898"
                    app:cardBackgroundColor="#71413A3A"
                    app:contentPadding="5dp">

                    <EditText
                        android:id="@+id/editTextSenhaRepetida"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="10dp"
                        android:layout_marginRight="10dp"
                        android:background="@drawable/shape_round_edittext"
                        android:hint="@string/repita_a_senha"
                        android:inputType="textPassword"
                        android:paddingLeft="20dp"
                        android:paddingTop="10dp"
                        android:paddingBottom="10dp" />

                </androidx.cardview.widget.CardView>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <Button
                        android:id="@+id/buttonVoltarCarona"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:background="@android:color/transparent"
                        android:text="@string/voltar"
                        android:textColor="#FF8F00" />

                    <Button
                        android:id="@+id/buttonProximoCarona"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:background="@android:color/transparent"
                        android:text="@string/pr_ximo"
                        android:textColor="#FF8F00" />
                </LinearLayout>

            </LinearLayout>


        </ScrollView>
    </androidx.cardview.widget.CardView>
</FrameLayout>